- Added markdown directive - Fixed moving-hover bug on the main title - Aligned logo - Aligned description of title

--- a/app/static/css/app.scss
+++ b/app/static/css/app.scss
@@ -1,5 +1,5 @@
 
-$font-color: rgb(80, 80, 80);
+$font-color: rgb(120, 120, 120);
 $background-color: rgb(253, 253, 253);
 $green: #C5EB87;
 
@@ -27,12 +27,11 @@ html {
   p {
     margin: 0px;
     padding: 0px;
-    opacity: 0.7;
     transition: opacity 0.1s;
+  }
 
-    &:hover {
-      opacity: 1.0;
-    }
+  h1, h2, h3, h4, p {
+    cursor: default;
   }
 }
 
@@ -60,8 +59,12 @@ header {
     display: block;
     flex-grow: 0;
     line-height: 32px;
-    margin-left: 20px;
+    margin-right: 20px;
     transition: border-bottom-color 0.1s;
+  
+    &:last-child {
+      margin-right: 0;
+    }
 
     &.link {
       border-bottom: 3px solid transparent;
@@ -183,6 +186,13 @@ header {
           font-size: 5.5em;
         }
 
+        p {
+          // Slightly align the description
+          // of the main headline to the F-character.
+          position: relative;
+          left: 5px;
+        }
+
         .slash {
           position: absolute;
           background-color: black;
@@ -191,8 +201,6 @@ header {
           width: 30px;
           bottom: 0px;
           transform: skewX(5deg);
-          // margin-left: 30px;
-          // padding-left: 30px;
         }
       }
     }
@@ -201,6 +209,8 @@ header {
 
 
 .logo {
+  padding: 0;
+  margin: 0;
   width: 64px;
   height: 32px;
   background-image: url("../img/logo2_transparent_512x512.png");
